--- a/public/style.css
+++ b/public/style.css
@@ -21,17 +21,20 @@ header {
     align-items: center;
     justify-content: space-between;
     background: -webkit-linear-gradient(var(--main-bg), #434a5c);
-    text-shadow: 1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191, 1px 18px 6px rgba(16, 16, 16, 0.4), 1px 22px 10px rgba(16, 16, 16, 0.2), 1px 30px 60px rgba(16, 16, 16, 0.4);
+    text-shadow: 0px 1px 2px white, 0px 2px 4px grey, 0px 2px 4px gray;
 }
 
 .headerTxt {
     display: inline-block;
     padding: 0.3rem;
     font-weight: bold;
+    text-decoration: none;
+    color: whitesmoke;
 }
 
 #burger {
     text-align: center;
+    z-index: 3;
 }
 
 .fa-bars {
@@ -52,7 +55,7 @@ nav {
     right: 0;
     justify-content: space-around;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
     box-shadow: 0px 1px 2px #51c2f3, 0px 2px 4px var(--main-bg),
         0px 4px 8px #51c2f3, 0px 8px 16px var(--main-bg);
 
@@ -80,7 +83,7 @@ li {
 
 }
 
-a {
+.navItems {
     text-decoration: none;
     margin-left: 0.4rem;
     line-height: 43px;
@@ -98,4 +101,166 @@ hr {
     width: 50%;
     margin: 0 auto;
     color: var(--main-bg);
+}
+
+.advertising {
+    margin: 0;
+    position: relative;
+    z-index: 1;
+}
+
+.advertising::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: url(/public/img/advert.jpg);
+    opacity: .4;
+    content: "";
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+}
+
+.advertContent {
+    position: relative;
+    display: block;
+}
+
+.advertContent::before {
+    opacity: 0.4;
+    background: rgb(69, 66, 71);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: .4;
+    content: "";
+    z-index: -1;
+    margin: 1rem;
+
+}
+
+h4 {
+    padding: 2rem;
+    color: rgb(242, 246, 250);
+    font-family: "Dia", Arial, serif;
+    line-height: 2.7rem;
+}
+
+span {
+    color: #51c2f3;
+    text-shadow: 0px 1px 2px #2e6f8b, 0px 2px 4px var(--main-bg), 0px 4px 8px #2e6f8b, 0px 8px 16px var(--main-bg);
+    font-size: 1.2rem;
+}
+
+.controllerBox {
+    position: absolute;
+    bottom: 5%;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    z-index: 10;
+    height: 14px;
+}
+
+.controllers {
+    display: inline-block;
+    background-color: rgb(242, 246, 250);
+    text-indent: -9999px;
+    border-radius: 7px;
+    width: 7px;
+    height: 7px;
+    margin-right: 10px;
+    padding: 0;
+    opacity: .5;
+}
+
+.showWhite {
+    opacity: 1;
+}
+
+@keyframes fadeIn {
+    from {
+        right: -100%;
+    }
+
+    to {
+        right: 0;
+    }
+}
+
+
+.firstPage {
+    position: relative;
+    right: -100%;
+    animation: fadeIn 8s forwards;
+    overflow: hidden;
+}
+
+.advertBox {
+    display: flex;
+    overflow: hidden;
+}
+
+.secondPage {
+    display: none;
+}
+
+@keyframes fade {
+    from {
+        left: 150%;
+    }
+
+    to {
+        left: 0;
+    }
+}
+
+.secondAnimated,
+.thirdAnimated {
+    position: absolute;
+    right: -100%;
+    animation: fade 8s forwards;
+}
+
+.thirdPage {
+    display: none;
+}
+
+.intro {
+    background-color: #337193;
+    padding: 1rem;
+    font-size: 1rem;
+}
+
+@keyframes showIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.introText {
+    opacity: 0;
+    margin-top: 2rem;
+    font-size: large;
+    font-weight: bold;
+    line-height: 1.7rem;
+    color: rgb(242, 246, 250);
+    font-family: "Dia", Arial, serif;
+    animation: showIn 6s forwards 2s;
+}
+
+.pics {
+    width: 20%;
+    height: 30%;
+    display: block;
+    margin: 1rem auto;
 }
