--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,9 @@ header {
     align-items: center;
     justify-content: space-between;
     background: -webkit-linear-gradient(var(--main-bg), #434a5c);
-    text-shadow: 0px 1px 2px white, 0px 2px 4px grey, 0px 2px 4px gray;
+    text-shadow:
+        1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191, 1px 18px 6px rgb(16 16 16 / 40%), 1px 22px 10px rgb(16 16 16 / 20%), 1px 30px 60px rgb(16 16 16 / 40%);
+
 }
 
 .headerTxt {
@@ -238,4 +240,78 @@ span {
     height: 30%;
     display: block;
     margin: 1rem auto;
+}
+
+.promo {
+    position: relative;
+    display: block;
+    color: rgb(12, 30, 77);
+    padding: 1rem;
+    font-size: large;
+    font-weight: bolder;
+    line-height: 1.7rem;
+    font-family: "Dia", Arial, serif;
+}
+
+.promo::before {
+    opacity: 0.4;
+    background: rgb(69, 66, 71);
+    position: absolute;
+    top: 0rem;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: .4;
+    content: "";
+    z-index: -1;
+}
+
+.promoPic {
+    width: 60%;
+    display: block;
+    margin: 1rem auto;
+    box-shadow: 0px 1px 2px white, 0px 2px 4px grey, 0px 2px 4px gray;
+    border-radius: 0.15rem;
+}
+
+.promoTitle {
+    padding: 0;
+    text-shadow: 1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191, 1px 18px 6px rgb(16 16 16 / 40%), 1px 22px 10px rgb(16 16 16 / 20%), 1px 30px 60px rgb(16 16 16 / 40%);
+}
+
+/*gallery*/
+.gallery {
+    background: rgb(12, 30, 77);
+}
+
+.galleryBox {
+    display: flex;
+    padding: 0.5rem 0;
+    flex-direction: column;
+}
+
+.galleryItems {
+    display: block;
+    margin: 0.5rem auto;
+    width: 85%;
+    box-shadow: inset 2px 2px 5px rgb(154 147 140 / 50%), 1px 1px 5px rgb(255 255 255);
+    border-radius: 0.25rem;
+    border: 1px solid rgb(241, 240, 240);
+    display: none;
+}
+
+@keyframes zoom {
+    from {
+        width: 0;
+
+    }
+
+    to {
+        width: 85%;
+
+    }
+}
+
+.zoomPic {
+    animation: zoom 4s forwards;
 }
