--- a/public/style.css
+++ b/public/style.css
@@ -297,7 +297,7 @@ span {
     box-shadow: inset 2px 2px 5px rgb(154 147 140 / 50%), 1px 1px 5px rgb(255 255 255);
     border-radius: 0.25rem;
     border: 1px solid rgb(241, 240, 240);
-    display: none;
+    visibility: hidden;
 }
 
 @keyframes zoom {
