--- a/public/style.css
+++ b/public/style.css
@@ -293,7 +293,7 @@ span {
 .galleryItems {
     display: block;
     margin: 0.5rem auto;
-    width: 85%;
+    width: 16rem;
     box-shadow: inset 2px 2px 5px rgb(154 147 140 / 50%), 1px 1px 5px rgb(255 255 255);
     border-radius: 0.25rem;
     border: 1px solid rgb(241, 240, 240);
