--- a/public/style.css
+++ b/public/style.css
@@ -213,6 +213,7 @@ span {
     background: linear-gradient(var(--main-bg), white);
     padding: 1rem;
     font-size: 1rem;
+    display: block;
 }
 
 .introPull {
@@ -342,4 +343,84 @@ span {
 
 .zoomPic {
     animation: zoom 4s forwards;
+}
+
+.contactName,
+.promoContact {
+    padding: 0;
+}
+
+.buckets {
+    width: 80%;
+    height: 90%;
+}
+
+@keyframes animate {
+    0% {
+        transform: perspective(1000px) rotateY(0deg);
+    }
+
+    100% {
+        transform: perspective(1000px) rotateY(360deg);
+    }
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(calc(-250px * 7));
+    }
+}
+
+
+.i1 {
+    --i: 1;
+}
+
+.i2 {
+    --i: 2;
+}
+
+.i3 {
+    --i: 3;
+}
+
+.i5 {
+    --i: 5;
+}
+
+.i4 {
+    --i: 4;
+}
+
+.i6 {
+    --i: 6;
+}
+
+.i7 {
+    --i: 7;
+}
+
+
+.box {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    transform-style: preserve-3d;
+    animation: animate 20s linear infinite;
+    margin: 3rem auto;
+}
+
+.box span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    transform-style: preserve-3d;
+    transform: rotateY(calc(var(--i) * 50deg)) translateZ(150px);
 }
