--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,7 @@ header {
     justify-content: space-between;
     /*text-shadow:
         1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191, 1px 18px 6px rgb(16 16 16 / 40%), 1px 22px 10px rgb(16 16 16 / 20%), 1px 30px 60px rgb(16 16 16 / 40%);*/
+    padding: 0.5rem 1.2rem;
 }
 
 .headerTxt {
@@ -34,22 +35,38 @@ header {
     color: whitesmoke;
 }
 
-#burger {
+#burger,
+#chevron {
     text-align: center;
     z-index: 3;
     color: white;
 }
 
+.fa-square-chevron-down {
+    height: 2rem;
+    text-shadow: 1px 1px 1px #ccc;
+    height: 1.3rem;
+}
+
 .fa-bars {
     display: block;
-    height: 2rem;
+    height: 1.3rem;
+}
+
+#user,
+#phNumber,
+#mail,
+#chevron,
+#burger {
+    color: #80c7e5;
+    font-size: 1rem;
 }
 
 nav {
     /*display: none;*/
     opacity: 0.9;
     position: absolute;
-    top: 0;
+    padding-top: 2rem;
     height: 100vh;
     background: #222;
     transform: translateY(-60rem);
@@ -61,13 +78,35 @@ nav {
     z-index: 2;
     box-shadow: 0px 1px 2px #51c2f3, 0px 2px 4px var(--main-bg),
         0px 4px 8px #51c2f3, 0px 8px 16px var(--main-bg);
-
+    width: 9rem;
 }
 
 .menu-active {
     transform: translateY(0);
-    width: 9rem;
 }
+
+.navLeftBox {
+    opacity: 0.9;
+    position: absolute;
+    height: 16vh;
+    background: #222;
+    transform: translateY(-30rem);
+    padding-left: 3.7rem;
+    transition: transform 550ms ease-in-out;
+    left: 1rem;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 2;
+    box-shadow: 0px 1px 2px #51c2f3, 0px 2px 4px var(--main-bg),
+        0px 4px 8px #51c2f3, 0px 8px 16px var(--main-bg);
+    padding-top: 1rem;
+    width: 21rem;
+}
+
+.menu-activeLeft {
+    transform: translateY(0);
+}
+
 
 ul {
     list-style-type: none;
@@ -83,14 +122,25 @@ li {
     transition: all ease 0.2s;
     margin-bottom: 0.3rem;
     width: 6rem;
+}
 
+.menuLeft {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.menuLeftItems {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
 }
 
 .navItems {
     text-decoration: none;
     margin-left: 0.4rem;
     line-height: 43px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: bold;
     border-radius: 5px;
     text-align: left;
