--- a/public/style.css
+++ b/public/style.css
@@ -207,9 +207,10 @@ h4 {
 
 span {
     color: #71c0e2;
-    text-shadow: 0px 1px 2px #2e6f8b, 0px 2px 4px rgb(12, 30, 77), 0px 4px 8px #2e6f8b, 0px 8px 16px rgb(12, 30, 77);
     font-size: 1.2rem;
+    text-shadow: 1px 1px 1px rgb(113, 192, 226), 1px 2px 1px #212227, 0px 8px 16px #212227;
 }
+
 
 .controllerBox {
     position: absolute;
